tests/scan/fixtures/validation/negative/clean_cargo_clean_http_client/src/lib.rs
//! A clean Rust crate: clean_http_client.

pub fn hello() -> &'static str { "hello" }
